version-23.1/reference/rpk/rpk-redpanda/rpk-redpanda-config-set.mdx
---
title: rpk redpanda config set
---

<head>
  <meta name="title" content="rpk redpanda config set | Redpanda Docs" />
  <meta name="description" content="rpk redpanda config set" />
  <link rel="canonical" href="https://docs.redpanda.com/docs/reference/rpk/rpk-redpanda/rpk-redpanda-config-set/" />
</head>

Set configuration values, such as the redpanda node ID or the list of seed servers

This command modifies the `redpanda.yaml` you have locally on disk.

### Examples

The first argument is the key within the yaml representing a property / field that you
would like to set. Nested fields can be accessed through a dot:

```
rpk redpanda config set redpanda.developer_mode true
```

The default format is to parse the value as yaml. Individual specific fields
can be set, or full structs:

```
rpk redpanda config set rpk.tune_disk_irq true
```

or

```
rpk redpanda config set redpanda.rpc_server '{address: 3.250.158.1, port: 9092}'
```

You can set an entire array by wrapping all items with braces, or by using one struct:

```
rpk redpanda config set redpanda.advertised_kafka_api '[{address: 0.0.0.0, port: 9092}]'
```

or

```
rpk redpanda config set redpanda.advertised_kafka_api '{address: 0.0.0.0, port: 9092}'
```

Indexing can be used to set specific items in an array. You can index one past
the end of an array to extend it:

```
rpk redpanda config set redpanda.advertised_kafka_api[1] '{address: 0.0.0.0, port: 9092}'
```

The json format can be used to set values as json:

```
rpk redpanda config set redpanda.rpc_server '{"address":"0.0.0.0","port":33145}' --format json
```

### Usage

```
rpk redpanda config set <key> <value> [flags]
```

### Flags

<!--
[cols=",,",]
|===
|*Value* |*Type* |*Description*

|--config |string |Redpanda config file, if not set the file will be
searched for in the default location.

|-h, --help |- |Help for set.

|-v, --verbose |- |Enable verbose logging (default `false`).
|===

-->
